# coding-adventure

./: Final_exam_maze_project.py  README.md  RisingTides.java
Data Structures/: HungerGames.java  RUHungry.java
Data Structures/PreReqChecker/: validprereq.in
Data Structures/Recap111/src/: Recap111.java
Data Structures/Recitation/src/: 1DArray.java  LLInsertAfter.java
Data Structures/RisingTides/DownloadCache/: 2025720616.data
Data Structures/Turtles/src/: BST.java  BinarySearch.java  CircularLinkedList.java  DoublyLinkedList.java  DrunkenTurtles.java  IntLL.java  IntNode.java  LinkedQueueOfStrings.java  LinkedStackOfStrings.java  QuickFindUF.java  QuickUnionUF.java  Recap111.java  ResizingArrayQueueOfStrings.java  ResizingArrayStackOfStrings.java  StringNode.java  Turtle.java  WeightedQuickUnionUF.java
GameDev/RaylibPlayground/4thAnniversary/: Anniversary  Makefile  main.c
GameDev/RaylibPlayground/Asteroid/: Asteroid  Makefile  Test  main.c
GameDev/RaylibPlayground/Examples/Core/8-2dCamera/: 2DCamera  CMakeLists.txt  Makefile  SimplePlatformer  main.c
GameDev/RaylibPlayground/HelloWorldProject/: HelloWorld  Makefile  main.c
GameDev/RaylibPlayground/Snake/: Makefile  Snake  Test  main.c  test.c
GameDev/RaylibPlayground/UltimaRPGTutorial/: CMakeLists.txt  Tutorial  main.c
GameDev/SDLPlayground/RaylibLogicTest/: Makefile  Test  main.c
GameDev/SDLPlayground/SimplePlatformer/: Makefile  SimplePlatformer  main.c
GameDev/SimplePlatformer/: 1q  CMakeLists.txt  Game Tileset.tsx  Game_map.tmx  Makefile  SimplePlatformer  Test_Platformer.tiled-session  main.c
GameDev/SimplePlatformer/assets/: Test_Platformer.tiled-session
GameDev/TiledPlayground/: .gitignore  CMakeLists.txt  Makefile  Test  main.c
GameDev/TiledPlayground/BoundedCameraViewing/: CMakeLists.txt  app  main.c
GameDev/TiledPlayground/BoundedCameraViewing/include/: mapRender.c  mapRender.h
GameDev/TiledPlayground/MapRendererFromScratch/: CMakeLists.txt  MapRenderer  main.c
GameDev/TiledPlayground/MapRendererFromScratch/assets/: GameBoyTest.tmx  Gameboy.tsx
GameDev/TiledPlayground/MapRendererFromScratch/include/: mapRender.c  mapRender.h
GameDev/TiledPlayground/TilemapCollision/: CMakeLists.txt  app  main.c  wtfmain.c
GameDev/TiledPlayground/TilemapCollision/CollisionInteraction/: app  main.c
GameDev/TiledPlayground/TilemapCollision/CollisionInteraction/include/: collisionObject.h  levelEntrance.c  levelEntrance.h  player.c  player.h
GameDev/TiledPlayground/TilemapCollision/include/: mapRender.c  mapRender.h  player.c  player.h
GameDev/TiledPlayground/WindowResizing/: CMakeLists.txt  app  main.c
GameDev/TiledPlayground/WindowResizing/include/: mapRender.h
GameDev/TiledPlayground/assets/: CaveRuinsEntrance.tmx  CaveRuinsTilesheet.tsx  GameBoyTest.tmx  Gameboy.tsx  Test_Platformer.tiled-session
Godot/Playground/: Playground.sln  Sprite.cs  icon.svg.import  label.tscn  project.godot
Godot/instancing/: Ball.tscn  Main.tscn  default_env.tres  icon.png.import
Godot/instancing/assets/: Bouncy Platform Long.png.import  Bouncy Platform Medium.png.import  ballBlue_10.png.import
Intro to CS/: RURottenTomatoes_Pseudocode_Concept.txt
Intro to CS/Assignments/ArtCollage/: Collage.java
Intro to CS/Assignments/SortDetective/: SortedArray.txt  TestArray.txt
Intro to CS/Assignments/cs111-a2/: HelloWorld.java  OrderCheck.java  WindChill.java
Intro to CS/Assignments/cs111-a3/: CheckDigit.java  LargestOfFive.java  RandomWalker.java
Intro to CS/Assignments/cs111-a4/: FindDuplicate.java  RURottenTomatoes.java
Intro to CS/Assignments/cs111-a5/: PolygonTransform.java
Intro to CS/Assignments/cs111-a6/: WeatherGenerator.java
Intro to CS/Assignments/cs111-a7/: Sierpinski.java
Intro to CS/Assignments/cs111-a8/: RecursiveAppend.java
Intro to CS/ExamplePrograms/: test.java
Intro to CS/ExamplePrograms/Between2Scroll/: Between2Scroll.java
Intro to CS/ExamplePrograms/Lecture/: Lecture3Exec1.txt  MultiplyStrings.java
Intro to CS/ExamplePrograms/Recitation/: Recitation2Exec1.txt
Intro to CS/Recitation/: CanYouVote.java  LoopCount.java  Problem1
OOP w Python/: ask8.py  class_grader.py  habit_tracker.py  lecture.py  lecture10.py  lecture11.py  lecture2.py  lecture3.py  lecture4.py  lecture5.py  lecture6.py  lecture7.py  lecture9.py  midterm_code.py  pizza_party.py  week1.py  weekly_planner.py
OOP w Python/MockData/: car.py  carCatalog.py  cc_analyzer.py
OOP w Python/MockData/NewMockData/: car.py  carCatalog.py  cars.csv  ccar2.py
c/AdventOfCode/2015/Day1/: Day1  (+3 more)
c/CLIFun/Fibonacci/: fib  main.c
c/CLIFun/HelloWorld/: hello  main.c
c/CLIFun/ManExample/: example  main.c
c/CProgramming_AModernApproach/: dweight2  dweight2.c
c/CProgramming_AModernApproach/BadPun/: pun.c
c/CProgramming_AModernApproach/DimensionalWeightofBox/: dweight  dweight.c
c/CProgramming_AModernApproach/F-C/: celsius  celsius.c
c/CardCounter/: CardCounter  main.c
c/CharSum/: CharSum.c  Sum
c/ConversionTest/: Convert  main.c
c/F-C/: a.out  f-c.c
c/FibonacciFun/: Fibo  main.c
c/Games/TextRPG/: RPG  main.c  makefile
c/HelloWorld/: HelloWorld  a.out  hello.c  makefile
c/MultiWordInputTest/: MultiWord  main.c
c/Practice/BooleanConditions/: a.out  main.c
c/Practice/ForLoopFun/: ForTest  main.c  stdio.h
c/Practice/Recursion/: Makefile  main.c  recurse
c/ProgrammingExercises/GreetAlice_and_Bob/: greet  main.c  makefile
c/ProgrammingExercises/GreetUser/: greet  main.c
c/ProgrammingExercises/HelloWorld/: main.c  makefile
c/RiichiMahjongCompass/: Compass  main.c
c/SPOJ/Book_Gift/: BOOKGFT  main.c
c/SPOJ/Character_Patterns_Act1/: CPTTRN1  main.c
c/SPOJ/XOR/: BSCXOR  main.c
c/TextAdventure/: Dungeon1.c  Dungeon1.h  Dungeon1.h.gch  a.out  main.c
c/printfFun/: printfFun  printfFun.c
c/scanfFun/: fun  main.c
cs/HelloWorld/: Program.cs
lua/: test.lua
lua/EightQueens/: main.lua
(+505 files in other folders)
